<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:visibility="visible"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/tb_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/background_dark"
        android:gravity="bottom|center_vertical"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:id="@+id/tb_row_01"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:gravity="center|fill_vertical"
            android:orientation="vertical"
            android:padding="4dp">

            <EditText
                android:id="@+id/txt01"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:layout_span="4"
                android:clickable="false"
                android:cursorVisible="false"
                android:ems="10"
                android:gravity="bottom|end"
                android:inputType="none"
                android:focusable="false"
                android:selectAllOnFocus="false"
                android:text="@string/strDisplay"
                android:textSize="24sp" />

        </TableRow>

        <TableRow
            android:id="@+id/tb_row_01_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:gravity="center|fill_vertical"
            android:orientation="vertical"
            android:padding="4dp">

            <EditText
                android:id="@+id/txt02"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:layout_span="4"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:ems="10"
                android:gravity="bottom|end"
                android:inputType="none"
                android:singleLine="false"
                android:text="@string/strDisplay"
                android:textSize="24sp"/>
        </TableRow>

        <TableRow
            android:id="@+id/tb_row_02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_vertical"
            android:gravity="center|fill_vertical"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnClear"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:layout_gravity="bottom|center_vertical"
                android:layout_margin="1dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/strClear"
                android:textColor="@color/colorAccent"
                android:textSize="24sp"
                android:typeface="monospace" />

            <Button
                android:id="@+id/btnSinal"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="bottom|center_vertical"
                android:layout_margin="1dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/strSinal"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:typeface="monospace" />

            <Button
                android:id="@+id/btnPercent"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="bottom|center_vertical"
                android:layout_margin="1dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/strPercent"
                android:textColor="@color/colorAccent"
                android:textSize="24sp"
                android:typeface="monospace" />

            <Button
                android:id="@+id/btnDiv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="bottom|center_vertical"
                android:layout_margin="1dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/strDivisor"
                android:textColor="@color/colorAccent"
                android:textSize="24sp"
                android:typeface="monospace" />
        </TableRow>

        <TableRow
            android:id="@+id/tb_row_03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_vertical"
            android:gravity="center|fill_vertical"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn7"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="bottom|center_vertical"
                android:layout_margin="1dp"
                android:background="@color/colorPrimary"
                android:text="@string/strSete"
                android:textColor="@color/colorAccent"
                android:textSize="24sp"
                android:typeface="monospace" />

            <Button
                android:id="@+id/btn8"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="bottom|center_vertical"
                android:layout_margin="1dp"
                android:background="@color/colorPrimary"
                android:text="@string/strOito"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:typeface="monospace" />

            <Button
                android:id="@+id/btn9"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="bottom|center_vertical"
                android:layout_margin="1dp"
                android:background="@color/colorPrimary"
                android:text="@string/strNove"
                android:textColor="@color/colorAccent"
                android:textSize="24sp"
                android:typeface="monospace" />

            <Button
                android:id="@+id/btnMult"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="bottom|center_vertical"
                android:layout_margin="1dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/strMultiply"
                android:textColor="@color/colorAccent"
                android:textSize="24sp"
                android:typeface="monospace" />
        </TableRow>

        <TableRow
            android:id="@+id/tb_row_04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_vertical"
            android:gravity="center|fill_vertical"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="bottom|center_vertical"
                android:layout_margin="1dp"
                android:background="@color/colorPrimary"
                android:text="@string/strQuatro"
                android:textColor="@color/colorAccent"
                android:textSize="24sp"
                android:typeface="monospace" />

            <Button
                android:id="@+id/btn5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="bottom|center_vertical"
                android:layout_margin="1dp"
                android:background="@color/colorPrimary"
                android:text="@string/strCinco"
                android:textColor="@color/colorAccent"
                android:textSize="24sp"
                android:typeface="monospace" />

            <Button
                android:id="@+id/btn6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="bottom|center_vertical"
                android:layout_margin="1dp"
                android:background="@color/colorPrimary"
                android:text="@string/strSeis"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:typeface="monospace" />

            <Button
                android:id="@+id/btnSub"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="bottom|center_vertical"
                android:layout_margin="1dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/strSubtrair"
                android:textColor="@color/colorAccent"
                android:textSize="24sp"
                android:typeface="monospace" />
        </TableRow>

        <TableRow
            android:id="@+id/tb_row_05"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_vertical"
            android:gravity="center|fill_vertical">

            <Button
                android:id="@+id/btn1"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="bottom|center_vertical"
                android:layout_margin="1dp"
                android:background="@color/colorPrimary"
                android:text="@string/strUm"
                android:textColor="@color/colorAccent"
                android:textSize="24sp"
                android:typeface="monospace" />

            <Button
                android:id="@+id/btn2"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="bottom|center_vertical"
                android:layout_margin="1dp"
                android:background="@color/colorPrimary"
                android:text="@string/strDois"
                android:textColor="@color/colorAccent"
                android:textSize="24sp"
                android:typeface="monospace" />

            <Button
                android:id="@+id/btn3"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="bottom|center_vertical"
                android:layout_margin="1dp"
                android:background="@color/colorPrimary"
                android:text="@string/strTres"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:typeface="monospace" />

            <Button
                android:id="@+id/btnSoma"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="bottom|center_vertical"
                android:layout_margin="1dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/strAdicao"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:typeface="monospace" />
        </TableRow>

        <TableRow
            android:id="@+id/tb_row_06"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_vertical"
            android:gravity="center|fill_vertical">

            <Button
                android:id="@+id/btn0"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:layout_gravity="bottom|center_vertical"
                android:layout_margin="1dp"
                android:layout_span="2"
                android:background="@color/colorPrimary"
                android:text="@string/strZero"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:typeface="monospace" />

            <Button
                android:id="@+id/btnFloat"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="bottom|center_vertical"
                android:layout_margin="1dp"
                android:background="@color/colorPrimary"
                android:text="@string/strFloat"
                android:textColor="@color/colorAccent"
                android:textSize="24sp"
                android:typeface="monospace" />

            <Button
                android:id="@+id/btnEqual"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="bottom|center_vertical"
                android:layout_margin="1dp"
                android:background="@android:color/holo_red_light"
                android:text="@string/strResult"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp"
                android:typeface="monospace" />
        </TableRow>
    </TableLayout>
</android.support.constraint.ConstraintLayout>